--- a/index.html
+++ b/index.html
@@ -40,6 +40,32 @@
 <ul>
 
     <tr>
+        <td> <b>Auto-AVSR: Audio-Visual Speech Recognition with Automatic Labels</b>
+             <a href="https://arxiv.org/abs/2303.14307"><i class="material-icons" style="font-size: 1.1em;";>content_copy</i></a>
+             <a href="https://github.com/mpc001/Visual_Speech_Recognition_for_Multiple_Languages"><i class="material-icons" style="font-size: 1.1em;">code</i></a>
+             <p>Pingchuan Ma, Alexandros Haliassos, Adriana Fernandez-Lopez, Honglie Chen, Stavros Petridis, Maja Pantic</p>
+
+         </td>
+        <td class="right">ICASSP, 2023</td>
+    </tr>
+
+    <tr>
+        <td> <b>Learning Cross-lingual Visual Speech Representations</b>
+             <a href="https://arxiv.org/abs/2303.09455"><i class="material-icons" style="font-size: 1.1em;";>content_copy</i></a> 
+             <p>Andreas Zinonos, Alexandros Haliassos, Pingchuan Ma, Stavros Petridis, Maja Pantic</p>
+         </td>
+        <td class="right">ICASSP, 2023</td>
+    </tr>
+
+    <tr>
+        <td> <b>Jointly Learning Visual and Auditory Speech Representations from Raw Data</b>
+             <a href="https://arxiv.org/abs/2212.06246"><i class="material-icons" style="font-size: 1.1em;";>content_copy</i></a> 
+             <p>Alexandros Haliassos, Pingchuan Ma, Rodrigo Mira, Stavros Petridis, Maja Pantic</p>
+         </td>
+        <td class="right">ICLR, 2023</td>
+    </tr>
+
+    <tr>
         <td> <b>Visual Speech Recognition for Multiple Languages in the Wild</b>
              <a href="https://rdcu.be/cYbcp"><i class="material-icons" style="font-size: 1.1em;";>content_copy</i></a>
              <a href="https://mpc001.github.io/lipreader.html"><i class="material-icons" style="font-size: 1.1em;">slideshow</i></a> 
