--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 <ul>
 
     <tr>
+        <td> <b>SynthVSR: Scaling Up Visual Speech Recognition With Synthetic Supervision</b>
+             <a href="https://arxiv.org/abs/2303.17200"><i class="material-icons" style="font-size: 1.1em;";>content_copy</i></a>
+             <p>Xubo Liu, Egor Lakomkin, Konstantinos Vougioukas, Pingchuan Ma, Honglie Chen, Ruiming Xie, Morrie Doulaty, Niko Moritz, Jáchym Kolář, Stavros Petridis, Maja Pantic, Christian Fuegen</p>
+
+         </td>
+        <td class="right">CVPR, 2023</td>
+    </tr>
+
+    <tr>
         <td> <b>Auto-AVSR: Audio-Visual Speech Recognition with Automatic Labels</b>
              <a href="https://arxiv.org/abs/2303.14307"><i class="material-icons" style="font-size: 1.1em;";>content_copy</i></a>
              <a href="https://github.com/mpc001/Visual_Speech_Recognition_for_Multiple_Languages"><i class="material-icons" style="font-size: 1.1em;">code</i></a>
@@ -67,7 +76,7 @@
 
     <tr>
         <td> <b>Visual Speech Recognition for Multiple Languages in the Wild</b>
-             <a href="https://rdcu.be/cYbcp"><i class="material-icons" style="font-size: 1.1em;";>content_copy</i></a>
+             <a href="https://arxiv.org/abs/2202.13084"><i class="material-icons" style="font-size: 1.1em;";>content_copy</i></a>
              <a href="https://mpc001.github.io/lipreader.html"><i class="material-icons" style="font-size: 1.1em;">slideshow</i></a> 
              <a href="https://github.com/mpc001/Visual_Speech_Recognition_for_Multiple_Languages"><i class="material-icons" style="font-size: 1.1em;">code</i></a>
              <p>Pingchuan Ma, Stavros Petridis, Maja Pantic</p>
