--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
 <ul>
 
     <tr>
+        <td> <b>Streaming Audio-Visual Speech Recognition with Alignment Regularization</b>
+             <a href="https://arxiv.org/abs/2211.02133"><i class="material-icons" style="font-size: 1.1em;";>content_copy</i></a>
+             <p>Pingchuan Ma, Niko Moritz, Stavros Petridis, Christian Fuegen, Maja Pantic</p>
+
+         </td>
+        <td class="right">Interspeech, 2023</td>
+    </tr>
+
+
+    <tr>
         <td> <b>SynthVSR: Scaling Up Visual Speech Recognition With Synthetic Supervision</b>
              <a href="https://arxiv.org/abs/2303.17200"><i class="material-icons" style="font-size: 1.1em;";>content_copy</i></a>
              <p>Xubo Liu, Egor Lakomkin, Konstantinos Vougioukas, Pingchuan Ma, Honglie Chen, Ruiming Xie, Morrie Doulaty, Niko Moritz, Jáchym Kolář, Stavros Petridis, Maja Pantic, Christian Fuegen</p>
