--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <tr>
         <td> <b>SynthVSR: Scaling Up Visual Speech Recognition With Synthetic Supervision</b>
              <a href="https://arxiv.org/abs/2303.17200"><i class="material-icons" style="font-size: 1.1em;";>content_copy</i></a>
+             <a href="https://liuxubo717.github.io/SynthVSR"><i class="material-icons" style="font-size: 1.1em;">slideshow</i></a>
              <p>Xubo Liu, Egor Lakomkin, Konstantinos Vougioukas, Pingchuan Ma, Honglie Chen, Ruiming Xie, Morrie Doulaty, Niko Moritz, Jáchym Kolář, Stavros Petridis, Maja Pantic, Christian Fuegen</p>
 
          </td>
@@ -61,7 +62,7 @@
     <tr>
         <td> <b>Auto-AVSR: Audio-Visual Speech Recognition with Automatic Labels</b>
              <a href="https://arxiv.org/abs/2303.14307"><i class="material-icons" style="font-size: 1.1em;";>content_copy</i></a>
-             <a href="https://github.com/mpc001/Visual_Speech_Recognition_for_Multiple_Languages"><i class="material-icons" style="font-size: 1.1em;">code</i></a>
+             <a href="https://github.com/mpc001/auto_avsr"><i class="material-icons" style="font-size: 1.1em;">code</i></a>
              <p>Pingchuan Ma, Alexandros Haliassos, Adriana Fernandez-Lopez, Honglie Chen, Stavros Petridis, Maja Pantic</p>
 
          </td>
