--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="text">
             <p>I am a postdoctoral researcher of <a href="https://about.meta.com/uk/realitylabs/">Reality Labs</a> at <a href="https://ai.facebook.com">Meta AI</a>. 
             	
-            Before joining Meta, I obtained my Ph.D. degree at <a href="https://www.imperial.ac.uk">Impeiral College London</a>, supervised by Prof. <a href="https://ibug.doc.ic.ac.uk/people/mpantic">Maja Pantic</a> and Dr. <a href="https://ibug.doc.ic.ac.uk/people/spetridis">Stavros Petridis</a>. I obtained my M.Sc. degree in Machine Learning at Department of Computing from Imperial College London and B.Sc. degree at School of Automation Science and Electrical Engineering at <a href="https://ev.buaa.edu.cn">Beihang University</a>, supervised by Prof. <a href="https://scholar.google.com/citations?user=-LQGKncAAAAJ&hl=en">Fei Tao</a>.
+            Before joining Meta, I obtained my Ph.D. degree at <a href="https://www.imperial.ac.uk">Impeiral College London</a>, supervised by Prof. <a href="https://ibug.doc.ic.ac.uk/people/mpantic">Maja Pantic</a> and Dr. <a href="https://ibug.doc.ic.ac.uk/people/spetridis">Stavros Petridis</a>. I obtained my M.Sc. degree in Machine Learning at Department of Computing from Imperial College London and B.Sc. degree at School of Automation Science and Electrical Engineering from <a href="https://ev.buaa.edu.cn">Beihang University</a>, supervised by Prof. <a href="https://scholar.google.com/citations?user=-LQGKncAAAAJ&hl=en">Fei Tao</a>.
 
             My research lies in the areas of artificial intelligence, computer vision and speech processing, aiming at understanding human behaviours with machine intelligence. Specifically, I work on deep learning models for audiovisual fusion, visual speech recognition / lipreading.
             </p>
@@ -215,7 +215,7 @@
           
           <script id="pubs_by_date" language="text">
 
-      <div class="text anchor"><h4>2023 (6)</h4></div>   
+      <div class="text anchor"><h4>2023 (7)</h4></div>
 
 
           <div class="publication">
@@ -231,6 +231,25 @@
                     </div>
                     <div>   
                       Conference of the International Speech Communication Association (<b>INTERSPEECH</b>), 2023</a></span> 
+                    </div>
+                  </div>
+          </div>
+
+
+          <div class="publication">
+                  <div class="img"><img class="img" src="pics/2023interspeech_sparse.jpg" width="210" height="95" style="box-shadow: 4px 4px 8px #888" alt="spotlight_jenga"></div>
+                  <div class="text">
+                    <div class="venue"><a name="jenga_scirobot" href="https://arxiv.org/abs/2307.04552">SparseVSR: Lightweight and Noise Robust Visual Speech Recognition</a></div>
+                    <div class="authors">
+                      <span class="author">Adriana Fernandez-Lopez</a></span>,
+                      <span class="author">Honglie Chen</a></span>,
+                      <span class="author jw">Pingchuan Ma</a></span>,
+                      <span class="author">Alexandros Haliassos</a></span>,
+                      <span class="author">Stavros Petridis</a></span>,
+                      <span class="author">Maja Pantic</a></span>
+                    </div>
+                    <div>
+                      Conference of the International Speech Communication Association (<b>INTERSPEECH</b>), 2023</a></span>
                     </div>
                   </div>
           </div>
